--- a/local/directive/devices/camera.html
+++ b/local/directive/devices/camera.html
@@ -1,7 +1,7 @@
 <div class="camera-wrap">
-  <img ng-if="thumbnailImg" ng-src={{thumbnailImg}} class="camera-cached-tumb" ng-click="requestLiveStream(cinfo)">
-  <h5 ng-if="!thumbnailImg">Camera not available</h5>
-  <button ng-if="!thumbnailImg" type="button" class="button camera-refresh-btn" ng-click="refreshFeed(cinfo)">
+  <img ng-if="cinfo.thumbnailImg" ng-src={{cinfo.thumbnailImg}} class="camera-cached-tumb" ng-click="requestLiveStream(cinfo)">
+  <h5 ng-if="!cinfo.thumbnailImg">Camera not available</h5>
+  <button ng-if="!cinfo.thumbnailImg" type="button" class="button camera-refresh-btn" ng-click="refreshFeed(cinfo)">
     Refresh feed
   </button>
   <h4>{{cinfo.name}}</h4>
