--- a/local/directive/devices/scene.html
+++ b/local/directive/devices/scene.html
@@ -7,7 +7,7 @@
       <p>{{scinfo.schedule | date: "dd/MM/yy"}}</p>
     </div>
   </div>
-  <div class="sce-box-footer">
+  <div class="sce-box-footer" ng-hide="currentState === 'frame.dashboard'">
     <p ng-click="editScene(scinfo)">Edit scene</p>
     <img src="img/button/cross.png" class="scene-delete-btn" ng-click="deleteScene(scinfo.id)">
   </div>
@@ -21,8 +21,8 @@
         <span class="color-blue">trigger</span>
         at:
       </p>
-      <input type="number" class="form-number" id="device-schedule-hours-{{scinfo.id}}" placeholder="Hours" min="0" max="23" required ng-blur="checkHours($event)">
-      <input type="number" class="form-number" id="device-schedule-minutes-{{scinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-blur="checkMinutes($event)">
+      <input type="number" class="form-number" id="device-schedule-hours-{{scinfo.id}}" placeholder="Hours" min="0" max="23" required ng-focus="checkHours($event)">
+      <input type="number" class="form-number" id="device-schedule-minutes-{{scinfo.id}}" placeholder="Minutes" min="0" max="59" required ng-focus="checkMinutes($event)">
 
       <div class="add-schedule-dev-options-wrap">
         <div class="add-schedule-dev-option">
