--- a/local/html_route/security_template.html
+++ b/local/html_route/security_template.html
@@ -21,13 +21,6 @@
 
 <div class="display-devices-row" ng-show="alarmToggle">
   <alarm ng-repeat="sensorAlarm in security.data.getDevicesObj.sensor" ainfo="sensorAlarm" ng-click="security.toggleAddSensor(sensorAlarm.id)"></alarm>
+    <alarm ng-repeat="sensorAlarm in security.data.getDevicesObj.camera" ainfo="sensorAlarm" ng-click="security.toggleAddSensor(sensorAlarm.id)"></alarm>
   <small class="color-transparent" ng-if="!security.data.getDevicesObj || security.data.getDevicesObj.sensor.length === 0">No sensors for triggering alarm were found</small>
 </div>
-
-<section class="custom-modal-window cam-live-stream-modal">
-  <section class="custom-modal-wrap">
-    <img src="img/button/cross.png" class="close-live-stream-modal" ng-click="security.stopLiveStream()">
-    <img ng-src={{security.liveImage}} class="camera-live-stream">
-    <i class="material-icons button full-screen-btn" ng-click="security.fullScreen()" title="full screen">fullscreen</i>
-  </section>
-</section>
